--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "^19.2.3",
-    "lucide-react": "0.344.0",
-    "recharts": "2.12.7",
-    "tailwind-merge": "2.3.0",
     "clsx": "2.1.1",
-    "html2canvas": "1.4.1"
+    "html2canvas": "1.4.1",
+    "lucide-react": "0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "2.12.7",
+    "tailwind-merge": "2.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
